--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,12 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
+    <script defer src="{{ url_for('static', filename='js/main.js') }}"></script>
   </head>
   <body>
     <div class="container">
       <h1>출석 현황</h1>
       <ul id="attendance-list"></ul>
-      <div
-        id="log-box"
-        style="margin-top: 20px; color: #555; font-size: 0.95em"
-      ></div>
     </div>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   </body>
 </html>
